# Philosophers

./: .gitmodules  Makefile
philo/: CMakeLists.txt  Makefile  tmp
philo/include/: check_args.h  common_tools.h  philo.h  philo_time.h  philo_tools.h
philo/src/: check_args.c  create_all_philosophers.c  create_and_start_all_philosophers_threads.c  create_monitor_thread_and_start_simulation.c  init_all_philosophers.c  main.c  set_global_params_from_args.c  set_params_from_args.c  start_all_philosophers_threads.c
philo/src/check_args/: check_args.c  ft_atoll.c
philo/src/common_tools/: all_philos_are_alive.c  error_msg.c  ft_atoll.c  philo_time.c  print_state_change.c
philo/src/monitor/: monitor_thread.c
philo/src/philosophers/: philosopher_thread.c
philo/src/philosophers_tools/: destroy_philosopher.c  philosopher_eats.c  philosopher_sleeps.c
src/: main.c  philo.c  philo.h
